--- a/9board.html
+++ b/9board.html
@@ -160,7 +160,7 @@ function utility(board, last_slot, slot, depth) {
 
 	// utility() could use the argument "board" to
 	// give move value to slots that cause the *next*
-	// move to loose the game, that is, by forcing the
+	// move to lose the game, that is, by forcing the
 	// other player into a move in a sub-board with
 	// 2-in-a-row or something.  Not implemented as yet.
 
